--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "guest-visitor",
   "version": "1.0.0",
   "description": "Lib to track information about guest visitors for web applications",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "test": "test"
+    "start": "webpack-dashboard -- webpack-dev-server --config webpack.dev.config.js --port 8888",
+    "build": "webpack --config webpack.dist.config.js",
+    "lint": "eslint .",
+    "check-master": "git symbolic-ref --short HEAD | grep ^master$ > /dev/null || (echo \"Not in 'master' branch. Aborting release\"; return 1)",
+    "prerelease": "npm run lint && npm run check-master",
+    "release:patch": "npm run prerelease && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch && git push --follow-tags",
+    "release:minor": "npm run prerelease && changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version minor && git push --follow-tags",
+    "release:major": "npm run prerelease && changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version major && git push --follow-tags"
   },
   "repository": {
     "type": "git",
@@ -15,5 +22,26 @@
   "bugs": {
     "url": "https://github.com/jojo5716/guest-visitor/issues"
   },
-  "homepage": "https://github.com/jojo5716/guest-visitor#readme"
+  "homepage": "https://github.com/jojo5716/guest-visitor#readme",
+  "dependencies": {
+    "isomorphic-fetch": "^2.2.1"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.18.0",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "generate-changelog": "^1.1.0",
+    "webpack": "^1.13.3",
+    "webpack-dashboard": "^0.2.0",
+    "webpack-dev-server": "^1.16.2"
+  }
 }
