--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/jojo5716/guest-visitor#readme",
   "dependencies": {
+    "foozle-tracker": "^1.0.19",
     "isomorphic-fetch": "^2.2.1",
     "querystring": "^0.2.0",
     "uuid": "^3.0.1"
