--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/jojo5716/foozle-visitor#readme",
   "dependencies": {
     "es6-promise": "^4.1.0",
-    "foozle-tracker": "^1.0.19",
+    "foozle-tracker": "^1.0.21",
     "isomorphic-fetch": "^2.2.1",
     "querystring": "^0.2.0",
     "uuid": "^3.0.1"
@@ -38,6 +38,7 @@
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.7",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.18.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb-base": "^10.0.1",
